force-app/main/default/objects/Letter_Approval__c/fields/Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approve</label>
    <type>Checkbox</type>
</CustomField>