force-app/main/default/objects/Letter_Approval__c/fields/Send_As_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_As_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send As Email</label>
    <type>Checkbox</type>
</CustomField>