force-app/main/default/objects/Letter_Approval__c/fields/Send_As_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_As_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send As Letter</label>
    <type>Checkbox</type>
</CustomField>